--- a/Task2/GocevMisha/Neural Network.ipynb
+++ b/Task2/GocevMisha/Neural Network.ipynb
@@ -33,6 +33,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from dataset import load_svhn, random_split_train_val\n",
     "from gradient_check import check_layer_gradient, check_layer_param_gradient, check_model_gradient\n",
@@ -42,6 +49,13 @@
     "from optim import SGD, MomentumSGD\n",
     "from metrics import multiclass_accuracy"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -178,6 +192,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -198,6 +219,20 @@
     "# What would be the value we expect?\n",
     "multiclass_accuracy(model_with_reg.predict(train_X[:30]), train_y[:30]) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -222,6 +257,13 @@
     "# You should expect loss to go down every epoch, even if it's slow\n",
     "loss_history, train_history, val_history = trainer.fit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -315,6 +357,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -349,6 +405,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -374,6 +437,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -394,12 +464,12 @@
    "source": [
     "# Let's train the best one-hidden-layer network we can\n",
     "\n",
-    "learning_rates = 1e-4\n",
+    "learning_rates = 1e-2\n",
     "reg_strength = 1e-3\n",
     "learning_rate_decay = 0.999\n",
-    "hidden_layer_size = 128\n",
-    "num_epochs = 200\n",
-    "batch_size = 64\n",
+    "hidden_layer_size = 256\n",
+    "num_epochs = 500\n",
+    "batch_size = 100\n",
     "\n",
     "best_classifier = None\n",
     "best_val_accuracy = None\n",
@@ -412,9 +482,22 @@
     "# Don't hesitate to add new values to the arrays above, perform experiments, use any tricks you want\n",
     "# You should expect to get to at least 40% of valudation accuracy\n",
     "# Save loss/train/history of the best classifier to the variables above\n",
+    "model = TwoLayerNet(n_input = train_X.shape[1], n_output = 10, hidden_layer_size = hidden_layer_size, \n",
+    "                    reg = reg_strength)\n",
+    "dataset = Dataset(train_X, train_y, val_X, val_y)\n",
+    "trainer = Trainer(model, dataset, SGD(), learning_rate=learning_rates, num_epochs=num_epochs, \n",
+    "                  batch_size=batch_size, learning_rate_decay=learning_rate_decay)\n",
     "\n",
+    "loss_history, train_history, val_history = trainer.fit()\n",
     "print('best validation accuracy achieved: %f' % best_val_accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -449,6 +532,34 @@
     "test_accuracy = multiclass_accuracy(test_pred, test_y)\n",
     "print('Neural net test set accuracy: %f' % (test_accuracy, ))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
